ploted A and the T-dep of tau

--- a/report/report.tex
+++ b/report/report.tex
@@ -583,7 +583,7 @@ This simple relation thus gives us the expectation value of the scalar operator.
 \end{equation}
 The current gives us the charge density $\rho=-\At_{(1)}$ and the transverse current $J_x=A_{x(1)}$. The minus sign is a convention to get a positive charge density.\\
 
-We are now in a position to numerically solve the bulk theory and obtain these expectation values. We do this by sweeping over different horizon values of $\psi$ and for each value find all solutions to the boundary condition $\psi_{(0)}=0$. This yields many different solutions $\rho/T$ at the boundary. Scale invariance lets us interpret this as systems of constant $\rho$ but at different temperatures $T$. We then get a variation in the chemical potential $\mu$, see Figure \ref{f:mu}. The chemical potential of the trivial solution there shown is calculated through
+We are now in a position to numerically solve the bulk theory and obtain these expectation values. We do this by sweeping over different horizon values of $\psi$ and for each value find all solutions to the boundary condition $\psi_{(0)}=0$. This yields many different solutions $\rho/T$ at the boundary. Scale invariance lets us interpret this as systems of constant $\rho$ but at different temperatures $T$. We then get a variation in the chemical potential $\mu$, see Figure \ref{f:mu}. The chemical potential of the trivial solution shown there is calculated through
 \begin{equation}
  \rho=\frac{\mu}{z_h}=\mu T\frac{4\pi}{3}.\label{muTdep}
 \end{equation}
@@ -698,7 +698,8 @@ where $C$ is a constant depending on what system we are considering. This integr
 \begin{equation}
  \int_0^\infty\re(\sigma(\omega)-1)\d\omega=C.
 \end{equation}
-The analytical solution above $T_c$ now gives $C=0$. This rule can now be used to verify that our numerics are accurate. The integral of $\re(\sigma(\omega)-1)$ should vanish for all temperatures. It is then important to include the $\delta$-function at $\omega=0$ which our numerics do not catch. We can however find the amplitude, $\Sigma_\delta$, of the $\delta$-function from the amplitude of the pole in the imaginary part of the conductivity. The sum of the integral of the continuous part of the conductivity, $\int(\sigma_n-1)\d \omega$, and $\Sigma_\delta$ should then equal 0 for all temperatures. The result is seen in Figure \ref{f:sum}. A suitable cut-off frequency has been used but since $\sigma(\omega)$ converges fast to 1 this is not a concern. No large discrepancies are observed. This is a strong check of the numerics since the real part of the conductivity at all frequencies and temperatures and the amplitude of the pole all have to match up. The largest discrepancy is observed for low temperatures, 
+The analytical solution above $T_c$ now gives $C=0$. This rule can now be used to verify that our numerics are accurate. The integral of $\re(\sigma(\omega)-1)$ should vanish for all temperatures. It is then important to include the $\delta$-function at $\omega=0$ which our numerics do not catch. We can however find the amplitude, $\Sigma_\delta$, of the $\delta$-function from the amplitude of the pole in the imaginary part of the conductivity. The sum of the integral of the continuous part of the conductivity, $\int(\sigma_n-1)\d \omega$, and $\Sigma_\delta$ should then equal 0 for all temperatures. The result is seen in Figure \ref{f:sum}. A suitable cut-off frequency has been used but since $\sigma(\omega)$ converges fast to 1 this is not a concern. No large discrepancies are observed. This is a strong check of the numerics since the real part of the conductivity at all frequencies and temperatures and the amplitude of the pole all have to match up. The largest discrepancy is observed for low temperatures,
+ 
 this is expected since the numerical integrator there has been observed to make smaller steps indicating a numerically more difficult problem.
 
 \fig{sum_rule_a20}{The two contributions to the integral in the modified Ferrell-Glover-Tinkham sum rule for different temperatures. The red line is expected to be precisely at 0 for perfect numerics\label{f:sum}}
@@ -771,12 +772,12 @@ This is valid for a large range of values of $\alpha_2$ and $T$.
 \fig{drudeTdep_1e4}{$\sigma_0L^4/\alpha_2$ as a function of temperature for large $\alpha_2$.\label{f:Cdep}}
 
 \section{Consistency Check using a Conductivity Sum Rule}
-A test of the numerics was again performed by verifying the sum rule. The result is seen in Figure \ref{f:sum2}.  There is a substantial error at low temperatures but it is decreased by increasing the number of samples for the numerical integral so it is believed to originate from the very sharp peaks, approaching $\delta$-functions, appearing at low temperatures making the numerical integral hard.
+A test of the numerics was again performed by verifying the sum rule. The result is seen in Figure \ref{f:sum2}.  There is a substantial error at low temperatures but it is decreased by increasing the number of samples for the numerical integral so it is believed to originate from the very sharp peaks, approaching $\delta$-functions, appearing at low temperatures making numerical integration difficult.
 
 \fig{sum_rule_a20.1}{The two contributions to the integral in the modified Ferrell-Glover-Tinkham sum rule for different temperatures. The red line is expected to be precisely at 0 for perfect numerics\label{f:sum2}. The small bump at about $T=0.2T_c$ is due to the numerical integration missing the very sharp conductivity peak developing at low temperature.}
 
 \section{Discussion}
-The drag force in the Drude model is due to electron collisions, the electrons have a mean time $\tau$ between collisions. These collisions are mainly with imperfections in the lattice which is something our translation-invariant theory cannot model. A similar effect could though be observed for interactions between other charge-carrying excitations of different charge.\\
+The drag force in the Drude model is due to electron collisions, the electrons have a mean time $\tau$ between collisions. These collisions are mainly with the lattice which is something our translation-invariant theory cannot model. A similar effect could though be observed for interactions between other charge-carrying excitations of different charge.\\
 The temperature dependence of the DC-conductivity $\sigma_0$ gives the temperature dependence of the scattering rate $1/\tau$
 \begin{equation}
   \frac{1}{\tau}=\frac{\rho q^2}{\sigma_0m}.
@@ -785,12 +786,12 @@ Assuming the parameters of the Drude model, $\rho$, $q^2$ and $m$, are temperatu
 \begin{equation}
   \frac{1}{\tau}=\frac{L^4\rho q^2}{C\alpha_2m}\left(\frac{T}{T_c}\right)^{4/3}.
 \end{equation}
-This disagrees with the linear temperature dependence of the scattering rate experimentally observed in the cuprates above $T_c$ \cite{drudeFit}. The linear dependence found in \cite{drudeFit} is attributed to electron-phonon interactions. Electrons might not be a suitable type of excitation for these possibly strongly coupled systems and our model might capture interactions between some other type of excitations. The assumptions of temperature independent Drude model parameters, $\rho$, $q^2$ and $m$, might then not be valid. The true temperature dependence of the scattering rate can easily be obtained directly from the Drude fit but this has not been done. This can then be compared with the linear experimental observations. The temperature dependence of the Drude model parameters can then be found. This might give important insights as to what types of excitations the Drude model describes with such high accuracy.
+This disagrees with the linear temperature dependence of the scattering rate experimentally observed in the cuprates above $T_c$ \cite{drudeFit}. The linear dependence found in \cite{drudeFit} is attributed to electron-phonon interactions. Electrons might not be a suitable type of excitation for these possibly strongly coupled systems and our model might capture interactions between some other type of excitations. The assumptions of temperature independent Drude model parameters, $\rho$, $q^2$ and $m$, might then not be valid. The true temperature dependence of the scattering rate can easily be obtained directly from the Drude fit but this has not been done. This can then be compared with the linear experimental observations. The temperature dependence of the Drude model parameters can then be found. This might give important insights as to what types of excitations the Drude model in the cases we have studied describes with such high accuracy.
 \chapter{Summary}
-We have shown how the AdS/CFT correspondence can be used to model a high-$T_c$ superconductor, both below and above $T_c$. This was initially done using the simplest possible Lagrangian and the frequency-dependent conductivity was calculated. A higher order term was added to the Lagrangian and a conductivity peak was obtained at low frequencies. The Drude model described this peak very well in certain limits. The behaviour of the Drude model parameter $\sigma_0$ was investigated in certain limits. Our extended Lagrangian seems to give an effective description of the lattice introduced in \cite{horowitz} but further investigations are needed.
+We have shown how the AdS/CFT correspondence can be used to model a high-$T_c$ superconductor, both below and above $T_c$. This was initially done using the simplest possible Lagrangian and the frequency-dependent conductivity was calculated. A higher order term was added to the Lagrangian and a conductivity peak was obtained at low frequencies. The Drude model describes this peak very well in certain limits. The behaviour of the Drude model parameter $\sigma_0$ was investigated in certain limits. Our extended Lagrangian seems to give an effective description of the lattice introduced in \cite{horowitz} but further investigations are needed.
 
 \section{Outlook}
-A much more thorough comparison with experimental results could be made. Formula \eqref{muTdep} could for example be investigated. The conductivity can also be investigated much more thoroughly. This has however already been done, e.g.~\cite{hartnoll8}, but it would be interesting to repeat their calculations. A thorough treatment of the differential equations would also be interesting. All curves in Figure \ref{f:O} approach the same value. The differential equation has been numerically investigated and it has the same boundary behaviour regardless of initial conditions so it seems possible to find a mathematical explanation for the behaviour by looking at the boundary behaviour of the equations.\\
+A much more thorough comparison with experimental results could be made. Formula \eqref{muTdep}, which relates the chemical potential and charge density for the non-superconducting solution, could for example be investigated. The conductivity can also be investigated much more thoroughly. This has however already been done, e.g.~\cite{hartnoll8}, but it would be interesting to repeat their calculations. A thorough treatment of the differential equations would also be interesting. All curves in Figure \ref{f:O} approach the same value. The differential equation has been numerically investigated and it has the same boundary behaviour regardless of initial conditions so it seems possible to find a mathematical explanation for the behaviour by looking at the boundary behaviour of the equations.\\
 
 The results from the extended Lagrangian can be investigated further. A physical interpretation of the conductivity peaks for low temperatures is needed for an understanding of the extension to the Lagrangian. The temperature dependence of the scattering rate $1/\tau$ can be found and compared to experiments. A linear temperature dependence would agree with experiments and thus indicate that our extended Lagrangian really captures the physics giving rise to the conductivity peak. A more thorough comparison with the results of \cite{horowitz} is of interest since we could hope to have found an effective description of their system. The power law behaviour of the conductivity at intermediate frequencies could for example be investigated.
 %It might be possible to see the $\delta$-function in the conductivity as a spontaneous symmetry breaking just like for the operator $\mathcal{O}$, an expectation value appearing without a source. The symmetry would be invariance The infinite conductivity should appear when $\omega=0$ and $\psi>0$. This is precisely when the terms without derivatives in the differential equation \eqref{eqm3} becomes negative near the boundary.
